# noncrypto-digests

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.cargo-husky/hooks/: pre-push
.github/workflows/: ci.yml
src/: common.rs  fnv.rs  lib.rs  xxh3.rs  xxh32.rs  xxh64.rs
tests/: test.rs
