[package]
name = "noncrypto-digests"
version = "0.2.2"
description = "Expose various non-cryptographic hashing functions with Digest traits"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/noncrypto-digests"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["hash", "digest", "fnv"]
categories = ["cryptography"]
rust-version = "1.60.0"

[features]
default = ["fnv"]
fnv = ["dep:fnv"]

[dependencies]
digest = "0.10.7"
fnv = { version = "1.0.7", optional = true }

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"], default-features = false }
hex = "0.4"
insta = { version = "1", features = [] }

[lints.rust]
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
