[package]
name = "noncrypto-digests"
version = "0.3.2"
description = "Implement Digest trait for non-cryptographic hashing functions like fnv and xxhash"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/noncrypto-digests"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["hash", "digest", "fnv", "xxhash", "xxh3"]
categories = ["cryptography"]
rust-version = "1.63.0"

[features]
default = ["fnv", "xxh3", "xxh32", "xxh64"]
fnv = ["dep:fnv"]
xxh3 = ["dep:xxhash-rust", "xxhash-rust?/xxh3"]
xxh32 = ["dep:xxhash-rust", "xxhash-rust?/xxh32"]
xxh64 = ["dep:xxhash-rust", "xxhash-rust?/xxh64"]

[dependencies]
digest = "0.10.7"
fnv = { version = "1.0.7", optional = true }
xxhash-rust = { version = "0.8.10", optional = true }

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"], default-features = false }
hex = "0.4"
insta = { version = "1", features = [] }

[lints.rust]
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
