[package]
name = "noncrypto-digests"
version = "0.3.6"
description = "Implement Digest trait for non-cryptographic hashing functions like fnv and xxhash"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/noncrypto-digests"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["hash", "digest", "fnv", "xxhash", "xxh3"]
categories = ["cryptography"]
rust-version = "1.66"

[features]
default = ["fnv", "xxh3", "xxh32", "xxh64"]
fnv = ["dep:fnv"]
xxh3 = ["dep:xxhash-rust", "xxhash-rust?/xxh3"]
xxh32 = ["dep:xxhash-rust", "xxhash-rust?/xxh32"]
xxh64 = ["dep:xxhash-rust", "xxhash-rust?/xxh64"]

[dependencies]
digest = "0.10.7"
fnv = { version = "1.0.7", optional = true }
xxhash-rust = { version = "0.8.10", optional = true }

[dev-dependencies]
hex = "0.4"
insta = "1"

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[lints.clippy]
# Restrictions
panic_in_result_fn = "warn"
todo = "warn"
unwrap_used = "warn"
# Pedantics without being too noisy
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
